[package]
name = "rpc_multiplayer_client"
version = "0.1.0"
authors = ["Henrik Melsom <melsom.henrik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3", features = ["full"] }
mini-redis = "0.4"
bytes = "1"